--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -7,11 +9,11 @@ plugins {
 }
 
 android {
-    namespace 'ru.ms.stu.todolist_va'
+    namespace 'com.example.gadalka'
     compileSdk 33
 
     defaultConfig {
-        applicationId "ru.ms.stu.todolist_va"
+        applicationId "com.example.gadalka"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -47,10 +49,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
 
-
-
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
